[gd_scene load_steps=12 format=3 uid="uid://dvunn78ymdqmt"]

[ext_resource type="Texture2D" uid="uid://dpynorkud462u" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/Cursor_Landing_Platform.png" id="1_spfap"]
[ext_resource type="Texture2D" uid="uid://ck0i4lj72vxln" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/CLPF1.png" id="2_37q11"]
[ext_resource type="Texture2D" uid="uid://b6xk84s0yd4tt" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/CLPF2.png" id="3_ewyor"]
[ext_resource type="Texture2D" uid="uid://7mir1sbrhqc2" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/CLPF3.png" id="4_p13ue"]
[ext_resource type="Texture2D" uid="uid://ccds831cfxwyc" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/CLPF4.png" id="5_6fovc"]
[ext_resource type="Texture2D" uid="uid://bqqv1i0dssctp" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/CLPF5.png" id="6_dq2k6"]
[ext_resource type="Script" path="res://Towers/Cursor_Tower/cursor_tower_fire.gd" id="7_o32gm"]
[ext_resource type="Texture2D" uid="uid://dihhoqlayg742" path="res://Towers/Cursor_Tower/CLP_Anim_Frames/Cursor.png" id="8_4cbu4"]

[sub_resource type="ArrayMesh" id="ArrayMesh_7s5ub"]
_surfaces = [{
"2d": true,
"aabb": AABB(-143.5, -144, 0, 287, 288, 0),
"attribute_data": PackedByteArray(129, 177, 39, 63, 75, 159, 116, 60, 129, 177, 39, 63, 34, 34, 162, 60, 156, 143, 65, 63, 188, 187, 123, 61, 156, 143, 65, 63, 102, 102, 134, 61, 237, 74, 84, 63, 160, 244, 233, 61, 237, 74, 84, 63, 52, 51, 243, 61, 62, 6, 103, 63, 68, 68, 68, 62, 62, 6, 103, 63, 194, 22, 76, 62, 221, 248, 119, 63, 182, 96, 155, 62, 221, 248, 119, 63, 148, 62, 161, 62, 0, 0, 128, 63, 148, 62, 209, 62, 0, 0, 128, 63, 57, 142, 15, 63, 57, 102, 121, 63, 0, 0, 48, 63, 137, 38, 120, 63, 0, 0, 48, 63, 79, 197, 106, 63, 171, 170, 74, 63, 116, 156, 105, 63, 171, 170, 74, 63, 178, 162, 80, 63, 228, 56, 102, 63, 85, 172, 78, 63, 228, 56, 102, 63, 38, 248, 67, 63, 114, 28, 111, 63, 159, 24, 66, 63, 114, 28, 111, 63, 30, 98, 46, 63, 28, 199, 121, 63, 188, 89, 43, 63, 28, 199, 121, 63, 117, 9, 17, 63, 0, 0, 128, 63, 164, 37, 215, 62, 0, 0, 128, 63, 12, 206, 199, 62, 46, 216, 126, 63, 12, 206, 199, 62, 91, 176, 125, 63, 246, 148, 135, 62, 176, 5, 115, 63, 246, 148, 135, 62, 28, 199, 113, 63, 83, 253, 28, 62, 165, 79, 94, 63, 83, 253, 28, 62, 17, 17, 93, 63, 45, 114, 128, 61, 216, 130, 65, 63, 45, 114, 128, 61, 182, 96, 63, 63, 51, 89, 228, 59, 233, 147, 30, 63, 51, 89, 228, 59, 28, 199, 25, 63, 0, 0, 0, 0, 142, 227, 8, 63, 0, 0, 0, 0, 199, 113, 220, 62, 82, 2, 137, 59, 85, 85, 197, 62, 192, 183, 14, 60, 85, 85, 197, 62, 198, 158, 242, 60, 199, 113, 156, 62, 100, 74, 13, 61, 199, 113, 156, 62, 68, 166, 212, 61, 142, 227, 56, 62, 197, 163, 222, 61, 142, 227, 56, 62, 178, 91, 90, 62, 57, 142, 163, 61, 42, 53, 98, 62, 57, 142, 163, 61, 63, 39, 172, 62, 228, 56, 142, 60, 180, 119, 179, 62, 228, 56, 142, 60, 110, 72, 222, 62, 0, 0, 0, 0, 29, 174, 16, 63, 0, 0, 0, 0),
"format": 33558545,
"index_count": 138,
"index_data": PackedByteArray(47, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 7, 0, 7, 0, 8, 0, 9, 0, 9, 0, 10, 0, 11, 0, 11, 0, 12, 0, 13, 0, 13, 0, 14, 0, 15, 0, 15, 0, 16, 0, 17, 0, 17, 0, 18, 0, 19, 0, 19, 0, 20, 0, 21, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 25, 0, 26, 0, 27, 0, 27, 0, 28, 0, 29, 0, 29, 0, 30, 0, 31, 0, 31, 0, 32, 0, 33, 0, 33, 0, 34, 0, 35, 0, 35, 0, 36, 0, 37, 0, 37, 0, 38, 0, 39, 0, 39, 0, 40, 0, 41, 0, 41, 0, 42, 0, 43, 0, 43, 0, 44, 0, 45, 0, 45, 0, 46, 0, 47, 0, 47, 0, 1, 0, 3, 0, 3, 0, 5, 0, 7, 0, 7, 0, 9, 0, 11, 0, 11, 0, 13, 0, 15, 0, 15, 0, 17, 0, 19, 0, 19, 0, 21, 0, 23, 0, 23, 0, 25, 0, 27, 0, 27, 0, 29, 0, 31, 0, 31, 0, 33, 0, 35, 0, 35, 0, 37, 0, 39, 0, 39, 0, 41, 0, 43, 0, 43, 0, 45, 0, 47, 0, 47, 0, 3, 0, 7, 0, 7, 0, 11, 0, 15, 0, 15, 0, 19, 0, 23, 0, 23, 0, 27, 0, 31, 0, 31, 0, 35, 0, 39, 0, 39, 0, 43, 0, 47, 0, 47, 0, 7, 0, 15, 0, 15, 0, 23, 0, 31, 0, 31, 0, 39, 0, 47, 0, 47, 0, 15, 0, 31, 0),
"primitive": 3,
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 0, 50, 66, 51, 179, 11, 195, 0, 0, 50, 66, 205, 76, 10, 195, 0, 0, 147, 66, 154, 153, 252, 194, 0, 0, 147, 66, 51, 51, 250, 194, 0, 0, 189, 66, 51, 51, 222, 194, 0, 0, 189, 66, 154, 153, 219, 194, 0, 0, 231, 66, 154, 153, 177, 194, 0, 0, 231, 66, 51, 51, 173, 194, 0, 128, 6, 67, 102, 102, 98, 194, 0, 128, 6, 67, 52, 51, 85, 194, 0, 128, 15, 67, 104, 102, 210, 193, 0, 128, 15, 67, 0, 0, 140, 65, 154, 25, 8, 67, 0, 0, 88, 66, 52, 179, 6, 67, 0, 0, 88, 66, 104, 102, 239, 66, 0, 0, 168, 66, 204, 204, 236, 66, 0, 0, 168, 66, 204, 204, 180, 66, 0, 0, 230, 66, 102, 102, 176, 66, 0, 0, 230, 66, 102, 102, 152, 66, 0, 0, 250, 66, 52, 51, 148, 66, 0, 0, 250, 66, 0, 0, 80, 66, 0, 0, 9, 67, 104, 102, 66, 66, 0, 0, 9, 67, 208, 204, 152, 65, 0, 0, 16, 67, 52, 51, 183, 193, 0, 0, 16, 67, 0, 0, 252, 193, 52, 179, 14, 67, 0, 0, 252, 193, 102, 102, 13, 67, 0, 0, 135, 194, 102, 102, 1, 67, 0, 0, 135, 194, 0, 0, 0, 67, 0, 0, 199, 194, 52, 51, 212, 66, 0, 0, 199, 194, 102, 102, 209, 66, 0, 0, 251, 194, 102, 102, 147, 66, 0, 0, 251, 194, 154, 153, 142, 66, 0, 128, 13, 195, 152, 153, 9, 66, 0, 128, 13, 195, 0, 0, 232, 65, 0, 128, 15, 195, 0, 0, 32, 65, 0, 128, 15, 195, 0, 0, 160, 193, 205, 76, 14, 195, 0, 0, 4, 194, 0, 0, 13, 195, 0, 0, 4, 194, 0, 0, 7, 195, 0, 0, 96, 194, 154, 153, 5, 195, 0, 0, 96, 194, 102, 102, 227, 194, 0, 0, 184, 194, 154, 153, 224, 194, 0, 0, 184, 194, 154, 153, 164, 194, 0, 0, 242, 194, 51, 51, 160, 194, 0, 0, 242, 194, 0, 0, 60, 194, 0, 0, 11, 195, 154, 153, 43, 194, 0, 0, 11, 195, 52, 51, 151, 193, 0, 0, 16, 195, 152, 153, 149, 65, 0, 0, 16, 195)
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yh48d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_spfap")
}, {
"duration": 1.0,
"texture": ExtResource("2_37q11")
}, {
"duration": 1.0,
"texture": ExtResource("3_ewyor")
}, {
"duration": 1.0,
"texture": ExtResource("4_p13ue")
}, {
"duration": 1.0,
"texture": ExtResource("5_6fovc")
}, {
"duration": 1.0,
"texture": ExtResource("6_dq2k6")
}, {
"duration": 1.0,
"texture": ExtResource("6_dq2k6")
}, {
"duration": 1.0,
"texture": ExtResource("5_6fovc")
}, {
"duration": 1.0,
"texture": ExtResource("4_p13ue")
}, {
"duration": 1.0,
"texture": ExtResource("3_ewyor")
}, {
"duration": 1.0,
"texture": ExtResource("2_37q11")
}, {
"duration": 1.0,
"texture": ExtResource("1_spfap")
}],
"loop": false,
"name": &"reload",
"speed": 60.0
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_hjjxg"]
_surfaces = [{
"2d": true,
"aabb": AABB(-85, -138.4, 0, 216, 323.4, 0),
"attribute_data": PackedByteArray(102, 102, 230, 62, 98, 161, 150, 62, 102, 102, 230, 62, 226, 199, 152, 62, 109, 231, 59, 63, 172, 173, 24, 63, 109, 231, 59, 63, 181, 166, 25, 63, 55, 137, 65, 63, 110, 197, 30, 63, 55, 137, 65, 63, 18, 131, 32, 63, 111, 18, 67, 63, 29, 90, 36, 63, 165, 189, 65, 63, 29, 90, 36, 63, 128, 183, 64, 63, 139, 108, 39, 63, 174, 216, 63, 63, 139, 108, 39, 63, 246, 185, 58, 63, 31, 133, 43, 63, 126, 140, 57, 63, 31, 133, 43, 63, 82, 184, 30, 63, 16, 233, 55, 63, 82, 184, 30, 63, 181, 166, 57, 63, 241, 133, 41, 63, 115, 104, 81, 63, 158, 239, 39, 63, 115, 104, 81, 63, 102, 102, 38, 63, 188, 116, 83, 63, 166, 155, 36, 63, 188, 116, 83, 63, 178, 157, 15, 63, 82, 184, 94, 63, 186, 184, 13, 63, 82, 184, 94, 63, 127, 217, 253, 62, 166, 155, 68, 63, 90, 100, 251, 62, 166, 155, 68, 63, 72, 225, 186, 62, 244, 253, 84, 63, 124, 97, 178, 62, 244, 253, 84, 63, 49, 8, 172, 62, 78, 209, 81, 63, 49, 8, 172, 62, 78, 98, 80, 63, 195, 245, 168, 62, 168, 87, 74, 63, 195, 245, 168, 62, 129, 149, 67, 63, 49, 8, 172, 62, 188, 116, 19, 63, 49, 8, 172, 62, 193, 202, 161, 62, 12, 2, 171, 62, 111, 18, 131, 62, 49, 8, 172, 62, 111, 18, 131, 62, 49, 8, 172, 62, 109, 231, 123, 62, 123, 20, 174, 62, 109, 231, 123, 62, 88, 57, 180, 62, 31, 133, 107, 62, 143, 49, 183, 62, 31, 133, 107, 62, 127, 106, 188, 62, 176, 114, 104, 62, 127, 106, 188, 62, 66, 207, 102, 62, 164, 223, 190, 62, 138, 142, 100, 62),
"format": 33558545,
"index_count": 111,
"index_data": PackedByteArray(38, 0, 0, 0, 1, 0, 1, 0, 2, 0, 3, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 7, 0, 7, 0, 8, 0, 9, 0, 9, 0, 10, 0, 11, 0, 13, 0, 14, 0, 15, 0, 15, 0, 16, 0, 17, 0, 17, 0, 18, 0, 19, 0, 21, 0, 22, 0, 23, 0, 23, 0, 24, 0, 25, 0, 25, 0, 26, 0, 27, 0, 29, 0, 30, 0, 31, 0, 31, 0, 32, 0, 33, 0, 33, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 38, 0, 1, 0, 3, 0, 3, 0, 5, 0, 7, 0, 7, 0, 9, 0, 11, 0, 13, 0, 15, 0, 17, 0, 17, 0, 19, 0, 20, 0, 21, 0, 23, 0, 25, 0, 25, 0, 27, 0, 28, 0, 29, 0, 31, 0, 33, 0, 33, 0, 35, 0, 36, 0, 36, 0, 38, 0, 3, 0, 3, 0, 7, 0, 11, 0, 13, 0, 17, 0, 20, 0, 21, 0, 25, 0, 28, 0, 28, 0, 29, 0, 33, 0, 33, 0, 36, 0, 3, 0, 3, 0, 11, 0, 12, 0, 12, 0, 13, 0, 20, 0, 20, 0, 21, 0, 28, 0, 28, 0, 33, 0, 3, 0, 3, 0, 12, 0, 20, 0, 20, 0, 28, 0, 3, 0),
"primitive": 3,
"vertex_count": 39,
"vertex_data": PackedByteArray(0, 0, 200, 193, 204, 204, 205, 194, 0, 0, 200, 193, 154, 153, 201, 194, 0, 0, 234, 66, 208, 204, 64, 66, 0, 0, 234, 66, 104, 102, 72, 66, 0, 0, 0, 67, 104, 102, 112, 66, 0, 0, 0, 67, 0, 0, 126, 66, 0, 0, 3, 67, 0, 0, 142, 66, 102, 102, 0, 67, 0, 0, 142, 66, 204, 204, 252, 66, 0, 0, 154, 66, 104, 102, 249, 66, 0, 0, 154, 66, 104, 102, 229, 66, 0, 0, 170, 66, 204, 204, 224, 66, 0, 0, 170, 66, 0, 0, 112, 66, 104, 102, 218, 66, 0, 0, 112, 66, 52, 51, 225, 66, 52, 51, 162, 66, 0, 0, 31, 67, 0, 0, 156, 66, 0, 0, 31, 67, 0, 0, 150, 66, 0, 0, 35, 67, 0, 0, 143, 66, 0, 0, 35, 67, 0, 0, 244, 65, 0, 0, 57, 67, 96, 102, 214, 65, 0, 0, 57, 67, 128, 102, 6, 192, 0, 0, 6, 67, 0, 0, 144, 192, 0, 0, 6, 67, 0, 0, 135, 194, 0, 0, 38, 67, 154, 153, 151, 194, 0, 0, 38, 67, 0, 0, 164, 194, 204, 204, 31, 67, 0, 0, 164, 194, 0, 0, 29, 67, 0, 0, 170, 194, 52, 51, 17, 67, 0, 0, 170, 194, 0, 0, 4, 67, 0, 0, 164, 194, 0, 0, 24, 66, 0, 0, 164, 194, 0, 0, 184, 194, 0, 0, 166, 194, 0, 0, 244, 194, 0, 0, 164, 194, 0, 0, 244, 194, 0, 0, 164, 194, 0, 0, 254, 194, 0, 0, 160, 194, 0, 0, 254, 194, 0, 0, 148, 194, 0, 0, 7, 195, 52, 51, 142, 194, 0, 0, 7, 195, 0, 0, 132, 194, 0, 128, 8, 195, 0, 0, 132, 194, 205, 76, 9, 195, 104, 102, 126, 194, 102, 102, 10, 195)
}]

[node name="Cursor_Platform" type="Node2D"]
scale = Vector2(0.8, 0.8)

[node name="CursorLandingPlatform" type="MeshInstance2D" parent="."]
rotation = 1.5708
scale = Vector2(0.282152, 0.286347)
mesh = SubResource("ArrayMesh_7s5ub")
texture = ExtResource("1_spfap")

[node name="Reload" type="AnimatedSprite2D" parent="CursorLandingPlatform"]
sprite_frames = SubResource("SpriteFrames_yh48d")
animation = &"reload"

[node name="Cursor_Tower" type="Node2D" parent="."]
script = ExtResource("7_o32gm")

[node name="midPoint" type="Marker2D" parent="Cursor_Tower"]

[node name="fire_Delay" type="Timer" parent="Cursor_Tower"]
wait_time = 0.25
one_shot = true

[node name="Cursor" type="MeshInstance2D" parent="Cursor_Tower"]
rotation = 2.04902
scale = Vector2(0.189815, 0.166976)
mesh = SubResource("ArrayMesh_hjjxg")
texture = ExtResource("8_4cbu4")

[connection signal="animation_finished" from="CursorLandingPlatform/Reload" to="Cursor_Tower" method="_on_reload_animation_finished"]
